--- a/public/style.css
+++ b/public/style.css
@@ -413,8 +413,8 @@ tbody:last-child tr:last-child td:last-child {
 
 #game{
   display: none;
-  border: 2px solid #000;
-  background-color: #cccccc;
+  border: 2px solid red;
+  background-color: black;
   position: absolute;
   margin :auto;
   top:0;
